--- a/package.json
+++ b/package.json
@@ -3,11 +3,9 @@
   "version": "1.0.0",
   "description": "Transforms your HyperTerm scrollbar to match your theme.",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "keywords": [
-    "hyperterm"
+    "hyperterm",
+    "scrollbar"
   ],
   "author": "Peter Wooley <peterwooley@gmail.com>>",
   "license": "MIT"
