--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "hyperterm",
     "scrollbar"
   ],
+  "repository": "peterwooley/hyperterm-themed-scrollbar",
   "author": "Peter Wooley <peterwooley@gmail.com>>",
   "license": "MIT"
 }
